--- a/NLP_Sentimient_Analysis_Project.ipynb
+++ b/NLP_Sentimient_Analysis_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuKbDha8qJOzzHMm3sWg1u",
+      "authorship_tag": "ABX9TyPZfFVRu+6bnZ9KbojmuT7s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,9 +97,9 @@
           "height": 423
         },
         "id": "C2paNHyv_NQV",
-        "outputId": "fb1d042c-3d3e-445e-c197-f3179264012b"
+        "outputId": "db54e696-9339-4e52-a4dd-7d7b334f6aa1"
       },
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +122,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-03736fa4-4275-4786-a655-b2be70f2bd83\">\n",
+              "  <div id=\"df-80139652-77eb-4556-808c-f308abf8a6af\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -206,7 +206,7 @@
               "</table>\n",
               "<p>16000 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-03736fa4-4275-4786-a655-b2be70f2bd83')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-80139652-77eb-4556-808c-f308abf8a6af')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -257,12 +257,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-03736fa4-4275-4786-a655-b2be70f2bd83 button.colab-df-convert');\n",
+              "          document.querySelector('#df-80139652-77eb-4556-808c-f308abf8a6af button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-03736fa4-4275-4786-a655-b2be70f2bd83');\n",
+              "          const element = document.querySelector('#df-80139652-77eb-4556-808c-f308abf8a6af');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -285,7 +285,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 20
         }
       ]
     },
@@ -722,9 +722,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f_Cov-49XHZh",
-        "outputId": "2561e19e-fd0f-4af0-da92-354ab7741541"
+        "outputId": "b4353980-95e8-4777-a072-0c5e37a1925e"
       },
-      "execution_count": 11,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -740,7 +740,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 21
         }
       ]
     },
@@ -755,12 +755,224 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "train_data['label code']= train_data.label.map({'joy'     : 0,\n",
+        "                                                'sadness' : 1,\n",
+        "                                                'anger'   : 2,\n",
+        "                                                'fear'    : 3,\n",
+        "                                                'love'    : 4,\n",
+        "                                                'surprise': 5})\n",
+        "train_data"
+      ],
       "metadata": {
-        "id": "-019gYrCZWJ0"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "-019gYrCZWJ0",
+        "outputId": "65c7a531-8045-412c-c2e7-4fbbb42e2ffe"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                                 comment    label  label code\n",
+              "0                                i didnt feel humiliated  sadness           1\n",
+              "1      i can go from feeling so hopeless to so damned...  sadness           1\n",
+              "2       im grabbing a minute to post i feel greedy wrong    anger           2\n",
+              "3      i am ever feeling nostalgic about the fireplac...     love           4\n",
+              "4                                   i am feeling grouchy    anger           2\n",
+              "...                                                  ...      ...         ...\n",
+              "15995  i just had a very brief time in the beanbag an...  sadness           1\n",
+              "15996  i am now turning and i feel pathetic that i am...  sadness           1\n",
+              "15997                     i feel strong and good overall      joy           0\n",
+              "15998  i feel like this was such a rude comment and i...    anger           2\n",
+              "15999  i know a lot but i feel so stupid because i ca...  sadness           1\n",
+              "\n",
+              "[16000 rows x 3 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-b126e1df-2007-4297-930a-84ac06c7cc0a\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>comment</th>\n",
+              "      <th>label</th>\n",
+              "      <th>label code</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>i didnt feel humiliated</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>i can go from feeling so hopeless to so damned...</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>im grabbing a minute to post i feel greedy wrong</td>\n",
+              "      <td>anger</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>i am ever feeling nostalgic about the fireplac...</td>\n",
+              "      <td>love</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>i am feeling grouchy</td>\n",
+              "      <td>anger</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15995</th>\n",
+              "      <td>i just had a very brief time in the beanbag an...</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15996</th>\n",
+              "      <td>i am now turning and i feel pathetic that i am...</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15997</th>\n",
+              "      <td>i feel strong and good overall</td>\n",
+              "      <td>joy</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15998</th>\n",
+              "      <td>i feel like this was such a rude comment and i...</td>\n",
+              "      <td>anger</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15999</th>\n",
+              "      <td>i know a lot but i feel so stupid because i ca...</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>16000 rows × 3 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b126e1df-2007-4297-930a-84ac06c7cc0a')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-b126e1df-2007-4297-930a-84ac06c7cc0a button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-b126e1df-2007-4297-930a-84ac06c7cc0a');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
