--- a/NLP_Sentimient_Analysis_Project.ipynb
+++ b/NLP_Sentimient_Analysis_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZfFVRu+6bnZ9KbojmuT7s",
+      "authorship_tag": "ABX9TyOeoxEtB8Oks2Kb6uL/zS8R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -756,12 +756,23 @@
     {
       "cell_type": "code",
       "source": [
-        "train_data['label code']= train_data.label.map({'joy'     : 0,\n",
-        "                                                'sadness' : 1,\n",
-        "                                                'anger'   : 2,\n",
-        "                                                'fear'    : 3,\n",
-        "                                                'love'    : 4,\n",
-        "                                                'surprise': 5})\n",
+        "code_sentimients = {'joy'     : 0,\n",
+        "                    'sadness' : 1,\n",
+        "                    'anger'   : 2,\n",
+        "                    'fear'    : 3,\n",
+        "                    'love'    : 4,\n",
+        "                    'surprise': 5}"
+      ],
+      "metadata": {
+        "id": "Yysx8kU0bxYT"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data['label code']= train_data.label.map(code_sentimients)\n",
         "train_data"
       ],
       "metadata": {
@@ -770,9 +781,9 @@
           "height": 423
         },
         "id": "-019gYrCZWJ0",
-        "outputId": "65c7a531-8045-412c-c2e7-4fbbb42e2ffe"
+        "outputId": "f1071596-7e35-4a84-a318-36e6a3d906a4"
       },
-      "execution_count": 22,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -795,7 +806,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b126e1df-2007-4297-930a-84ac06c7cc0a\">\n",
+              "  <div id=\"df-198b300b-d220-4c87-b500-cb0f713ebe63\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -891,7 +902,7 @@
               "</table>\n",
               "<p>16000 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b126e1df-2007-4297-930a-84ac06c7cc0a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-198b300b-d220-4c87-b500-cb0f713ebe63')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -942,12 +953,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b126e1df-2007-4297-930a-84ac06c7cc0a button.colab-df-convert');\n",
+              "          document.querySelector('#df-198b300b-d220-4c87-b500-cb0f713ebe63 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b126e1df-2007-4297-930a-84ac06c7cc0a');\n",
+              "          const element = document.querySelector('#df-198b300b-d220-4c87-b500-cb0f713ebe63');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -970,7 +981,223 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_data['label code']= test_data.label.map(code_sentimients)\n",
+        "test_data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "dblEDlUIarHY",
+        "outputId": "4aef960e-ee17-4cad-c2d0-6efa29ef2c8c"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                                comment    label  label code\n",
+              "0     im feeling rather rotten so im not very ambiti...  sadness           1\n",
+              "1             im updating my blog because i feel shitty  sadness           1\n",
+              "2     i never make her separate from me because i do...  sadness           1\n",
+              "3     i left with my bouquet of red and yellow tulip...      joy           0\n",
+              "4       i was feeling a little vain when i did this one  sadness           1\n",
+              "...                                                 ...      ...         ...\n",
+              "1995  i just keep feeling like someone is being unki...    anger           2\n",
+              "1996  im feeling a little cranky negative after this...    anger           2\n",
+              "1997  i feel that i am useful to my people and that ...      joy           0\n",
+              "1998  im feeling more comfortable with derby i feel ...      joy           0\n",
+              "1999  i feel all weird when i have to meet w people ...     fear           3\n",
+              "\n",
+              "[2000 rows x 3 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-39e9b9a2-3bdf-45f6-9e5d-46934e4f86ca\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>comment</th>\n",
+              "      <th>label</th>\n",
+              "      <th>label code</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>im feeling rather rotten so im not very ambiti...</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>im updating my blog because i feel shitty</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>i never make her separate from me because i do...</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>i left with my bouquet of red and yellow tulip...</td>\n",
+              "      <td>joy</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>i was feeling a little vain when i did this one</td>\n",
+              "      <td>sadness</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1995</th>\n",
+              "      <td>i just keep feeling like someone is being unki...</td>\n",
+              "      <td>anger</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1996</th>\n",
+              "      <td>im feeling a little cranky negative after this...</td>\n",
+              "      <td>anger</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1997</th>\n",
+              "      <td>i feel that i am useful to my people and that ...</td>\n",
+              "      <td>joy</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1998</th>\n",
+              "      <td>im feeling more comfortable with derby i feel ...</td>\n",
+              "      <td>joy</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1999</th>\n",
+              "      <td>i feel all weird when i have to meet w people ...</td>\n",
+              "      <td>fear</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2000 rows × 3 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-39e9b9a2-3bdf-45f6-9e5d-46934e4f86ca')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-39e9b9a2-3bdf-45f6-9e5d-46934e4f86ca button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-39e9b9a2-3bdf-45f6-9e5d-46934e4f86ca');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     },
