--- a/NLP_Sentimient_Analysis_Project.ipynb
+++ b/NLP_Sentimient_Analysis_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODb5tKxTdiNdq9vdu8tJl8",
+      "authorship_tag": "ABX9TyN8UkTbL9bps8DMdpNuJmfB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1799,7 +1799,7 @@
         "# Transformar los datos de entrenamiento y prueba\n",
         "X = input_train\n",
         "Y = df_train[\"label code\"]\n",
-        "\n",
+        "\"\"\"\n",
         "# Obtener la secuencia de tokens\n",
         "X_train_sequences = X_train_tfidf.toarray()\n",
         "X_test_sequences = X_test_tfidf.toarray()\n",
@@ -1808,15 +1808,15 @@
         "max_sequence_length = max(len(seq) for seq in X_train_sequences)\n",
         "X_train_sequences = pad_sequences(X_train_sequences, maxlen=max_sequence_length)\n",
         "X_test_sequences = pad_sequences(X_test_sequences, maxlen=max_sequence_length)\n",
-        "\n",
+        "\"\"\"\n",
         "# Crear el modelo RNN\n",
         "model = Sequential()\n",
-        "model.add(Embedding(input_dim=len(tfidf.vocabulary_), output_dim=100, input_length=max_sequence_length))\n",
+        "model.add(Embedding(input_dim=len(TfidfVectorizer().vocabulary_), output_dim=100, input_length=max_sequence_length))\n",
         "model.add(SimpleRNN(units=32))\n",
-        "model.add(Dense(units=1, activation='sigmoid'))\n",
+        "model.add(Dense(units=7, activation='softmax'))  # Cambio en el número de unidades y la activación\n",
         "\n",
         "# Compilar el modelo\n",
-        "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])  # Cambio en la función de pérdida\n",
         "\n",
         "# Entrenar el modelo\n",
         "model.fit(X_train_sequences, y_train, epochs=10, batch_size=32)\n",
