--- a/NLP_Sentimient_Analysis_Project.ipynb
+++ b/NLP_Sentimient_Analysis_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8UkTbL9bps8DMdpNuJmfB",
+      "authorship_tag": "ABX9TyOj0xV8OqzpK89siv8/8WB/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1735,12 +1735,32 @@
     {
       "cell_type": "code",
       "source": [
-        "input_train = TfidfVectorizer().fit_transform(df_train[\"comment_lema\"]).toarray()"
+        "tfidf = TfidfVectorizer()"
+      ],
+      "metadata": {
+        "id": "aQq4ZlJ1TNMW"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5vhUtZ4HTRXI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_train = tfidf.fit_transform(df_train[\"comment_lema\"]).toarray()"
       ],
       "metadata": {
         "id": "AVQqLSq3HajL"
       },
-      "execution_count": 58,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -1782,7 +1802,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense, Embedding, SimpleRNN\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences"
@@ -1790,7 +1809,7 @@
       "metadata": {
         "id": "QbkbRh2554Dj"
       },
-      "execution_count": 1,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -1798,20 +1817,89 @@
       "source": [
         "# Transformar los datos de entrenamiento y prueba\n",
         "X = input_train\n",
-        "Y = df_train[\"label code\"]\n",
-        "\"\"\"\n",
-        "# Obtener la secuencia de tokens\n",
-        "X_train_sequences = X_train_tfidf.toarray()\n",
-        "X_test_sequences = X_test_tfidf.toarray()\n",
-        "\n",
-        "# Asegurar que todas las secuencias tengan la misma longitud\n",
-        "max_sequence_length = max(len(seq) for seq in X_train_sequences)\n",
-        "X_train_sequences = pad_sequences(X_train_sequences, maxlen=max_sequence_length)\n",
-        "X_test_sequences = pad_sequences(X_test_sequences, maxlen=max_sequence_length)\n",
-        "\"\"\"\n",
+        "Y = df_train[\"label\"]"
+      ],
+      "metadata": {
+        "id": "fR6Hb1ZuRZJp"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QFr4zxJ5Rexr",
+        "outputId": "b677f803-997a-4a60-fb89-f238357d6ff3"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+              "       [0., 0., 0., ..., 0., 0., 0.],\n",
+              "       [0., 0., 0., ..., 0., 0., 0.],\n",
+              "       ...,\n",
+              "       [0., 0., 0., ..., 0., 0., 0.],\n",
+              "       [0., 0., 0., ..., 0., 0., 0.],\n",
+              "       [0., 0., 0., ..., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nZmmENvjRgY4",
+        "outputId": "fdaaf0ff-94a2-4569-e229-3dac5b7e1d07"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        1\n",
+              "1        1\n",
+              "2        2\n",
+              "3        4\n",
+              "4        2\n",
+              "        ..\n",
+              "15995    1\n",
+              "15996    1\n",
+              "15997    0\n",
+              "15998    2\n",
+              "15999    1\n",
+              "Name: label, Length: 16000, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Crear el modelo RNN\n",
         "model = Sequential()\n",
-        "model.add(Embedding(input_dim=len(TfidfVectorizer().vocabulary_), output_dim=100, input_length=max_sequence_length))\n",
+        "model.add(Embedding(input_dim=len(tfidf.vocabulary_), output_dim=100, input_length=len(X[0])))\n",
         "model.add(SimpleRNN(units=32))\n",
         "model.add(Dense(units=7, activation='softmax'))  # Cambio en el número de unidades y la activación\n",
         "\n",
@@ -1819,26 +1907,25 @@
         "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])  # Cambio en la función de pérdida\n",
         "\n",
         "# Entrenar el modelo\n",
-        "model.fit(X_train_sequences, y_train, epochs=10, batch_size=32)\n",
+        "model.fit(X, Y, epochs=1, batch_size=32)\n",
         "\n",
         "# Realizar predicciones\n",
-        "predictions = model.predict(X_test_sequences)\n"
+        "#predictions = model.predict(X_test_sequences)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iFKA3YDz555G",
-        "outputId": "abe4e494-3c61-429e-c9f0-8241f8223d6f"
+        "outputId": "105b5358-ebe2-43e9-8573-9b7166b93380"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
-            "17464789/17464789 [==============================] - 0s 0us/step\n"
+            " 14/500 [..............................] - ETA: 3:12:21 - loss: 1.7926 - accuracy: 0.2969"
           ]
         }
       ]
