--- a/NLP_Sentimient_Analysis_Project.ipynb
+++ b/NLP_Sentimient_Analysis_Project.ipynb
@@ -25,7 +25,7 @@
         "id": "6kmSNN-muV22"
       },
       "source": [
-        "El objetivo de este proyecto es proponer y evaluar un modelo de análisis de sentimientos basado en redes neuronales recurrentes (RNN) que implementa la arquitectura ResNET utilizando la biblioteca TensorFlow. La combinación de estas técnicas tiene como objetivo mejorar el rendimiento del modelo en la clasificación de sentimientos en comparación con enfoques tradicionales.\n",
+        "El objetivo de este proyecto es proponer y evaluar un modelo de análisis de sentimientos basado en redes neuronales recurrentes (RNN) que implementa la arquitectura LSTM utilizando la biblioteca TensorFlow. La combinación de estas técnicas tiene como objetivo mejorar el rendimiento del modelo en la clasificación de sentimientos en comparación con enfoques tradicionales.\n",
         "\n",
         "**Nota**\n",
         "\n",
@@ -1933,57 +1933,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gdt1UmP9I174"
-      },
-      "outputs": [],
-      "source": [
-        "from sklearn.feature_extraction.text import TfidfVectorizer"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aQq4ZlJ1TNMW"
-      },
-      "outputs": [],
-      "source": [
-        "tfidf = TfidfVectorizer()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "AVQqLSq3HajL"
-      },
-      "outputs": [],
-      "source": [
-        "input_train = tfidf.fit_transform(df_train[\"comment_lema\"][:1000]).toarray()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ICS0D641n6sg"
-      },
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "9ltyZzOOCZA1"
-      },
-      "outputs": [],
-      "source": [
-        "test =  tfidf.transform(df_test[\"comment_lema\"]).toarray()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
@@ -2206,32 +2155,6 @@
       ],
       "source": [
         "df_train"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "len(tfidf.vocabulary_)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JB8nYl3WnysG",
-        "outputId": "314ac529-a9c9-4ce2-cd02-433805d332e2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2787"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 54
-        }
       ]
     },
     {
@@ -2609,12 +2532,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "DYNhrySIX2V_",
-        "outputId": "7b41e107-55e1-4e60-8af8-bc78a7862c32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 590
-        }
+        },
+        "id": "DYNhrySIX2V_",
+        "outputId": "7b41e107-55e1-4e60-8af8-bc78a7862c32"
       },
       "execution_count": 50,
       "outputs": [
@@ -2640,16 +2563,15 @@
     {
       "cell_type": "code",
       "source": [
-        "inverse_code_sentiments = {0: 'joy', 1: 'sadness', 2: 'anger', 3: 'fear', 4: 'love', 5: 'surprise'}\n",
-        "inverse_code_sentiments[0]"
+        "inverse_code_sentiments = {0: 'joy', 1: 'sadness', 2: 'anger', 3: 'fear', 4: 'love', 5: 'surprise'}"
       ],
       "metadata": {
-        "id": "RiasS-GadU1M",
-        "outputId": "3a65819a-2228-488e-8731-563f339a2cbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "RiasS-GadU1M",
+        "outputId": "3a65819a-2228-488e-8731-563f339a2cbc"
       },
       "execution_count": 59,
       "outputs": [
@@ -2676,11 +2598,11 @@
         "print(\"Accuracy:\", accuracy)"
       ],
       "metadata": {
-        "id": "yWqL49_PZWU8",
-        "outputId": "1a569c33-1e2d-4744-c52f-3aa44a15174c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yWqL49_PZWU8",
+        "outputId": "1a569c33-1e2d-4744-c52f-3aa44a15174c"
       },
       "execution_count": 51,
       "outputs": [
